Fix work log list not showing up

--- a/ui/logs.css
+++ b/ui/logs.css
@@ -142,7 +142,7 @@ a {
   transition: 0.25s all;
 }
 .main .nav .menu ul li.active {
-  color: #79bc46;
+  background-color: #79bc46;
 }
 .main .nav .menu ul li:hover {
   background-color: #999;
@@ -155,6 +155,11 @@ a {
   position: relative;
   margin-left: 200px;
 }
+
+.main .view #content {
+  padding: 1em;
+}
+
 .main .view .viewHeader {
   width: 100%;
   height: 70px;
@@ -290,6 +295,17 @@ a {
     padding: 1em;
     width: 93%;
     margin: auto;
+}
+
+.task-on-list, .task-cancelled, .task-cplted, .task-new {
+    position: relative;
+    margin: 1em;
+    padding: 0.625em;
+    list-style: none;
+    border: 1px solid #878787;
+    -webkit-box-shadow: 0px 2px 5px 0px rgba(0,0,0,0.75);
+    -moz-box-shadow: 0px 2px 5px 0px rgba(0,0,0,0.75);
+    box-shadow: 0px 2px 5px 0px rgba(0,0,0,0.75);
 }
 
 #waiting-task {
